--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://woshikedayaa.github.io/'
+baseURL = 'https://blog.woshikedayaa.cn/'
 languageCode = 'zh-cn'
 title = 'woshikedayaa的博客'
 theme = "hugo-ficurinia"
