--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -58,7 +58,8 @@ jobs:
         run: |
           hugo \
             --gc \
-            --minify           
+            --minify   \
+            -D        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
