--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,30 @@
 baseURL = 'https://blog.woshikedayaa.cn/'
 languageCode = 'zh-cn'
-title = 'woshikedayaa的博客'
+title = "woshikedayaa's house"
 theme = "hugo-ficurinia"
+[params]
+	author = "woshikedayaa"
+	description = "A blog for myself"
+[menu]
+    # these links will be added to the main navigation menu, sorted by weight
+    # other elements in this menu are added automatically from the "pages" folder
+    # the folder it will look into can be customized with the pages variable
+    # in params above
+    [[menu.main]]
+        identifier = "about"
+        name = "About"
+        url = "/about/"
+        weight = 10
+    # these links (menu.icons) will be added as icon links below the main nav
+    [[menu.icons]]
+        identifier = "github"
+        name = "Github"
+        url = "https://github.com/woshikedayaa"
+        weight = 10
+    [[menu.icons]]
+        identifier = "youtube"
+	name = "bilibili"
+	url = "https://space.bilibili.com/286638343"
+	weight = 10
+		
+
